--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -37,7 +37,11 @@
     <string name="risk_low">कम</string>
     <string name="nearest_shelter">निकटतम आश्रय</string>
     <string name="last_updated">अंतिम अपडेट: %s</string>
-    <string name="confidence">आत्मविश्वास: %d%%</string>
+    <string name="confidence_label">आत्मविश्वास: %d%%</string>
+    <string name="live_status">लाइव स्थिति</string>
+    <string name="evacuate_nearest">निकटतम आश्रय में निकासी करें</string>
+    <string name="report_flood_damage">बाढ़ / क्षति की रिपोर्ट करें</string>
+    <string name="nearest_shelter_info">निकटतम आश्रय जानकारी</string>
 
     <!-- Evacuation Route -->
     <string name="safe_route">सुरक्षित मार्ग</string>
@@ -50,6 +54,9 @@
     <string name="send_to_contacts">संपर्कों को भेजें</string>
     <string name="low_confidence_warning">इस मार्ग में कम विश्वास है। कृपया आगे बढ़ने से पहले पुष्टि करें।</string>
     <string name="confirm_route">मार्ग की पुष्टि करें</string>
+    <string name="route_details">मार्ग विवरण</string>
+    <string name="model_trace">मॉडल ट्रेस डेटा</string>
+    <string name="sources_used">इस गणना के लिए उपयोग किए गए स्रोत:</string>
 
     <!-- Alerts -->
     <string name="alerts">अलर्ट</string>
@@ -61,6 +68,8 @@
     <string name="im_safe">मैं सुरक्षित हूँ</string>
     <string name="no_alerts">कोई सक्रिय अलर्ट नहीं</string>
     <string name="no_alerts_desc">आप पूरी तरह अपडेट हैं!</string>
+    <string name="notifications_alerts">सूचनाएं और अलर्ट</string>
+    <string name="request_help_area">इस क्षेत्र के लिए मदद मांगें</string>
 
     <!-- Report -->
     <string name="create_report">रिपोर्ट बनाएँ</string>
@@ -68,7 +77,7 @@
     <string name="flood">बाढ़</string>
     <string name="erosion">कटाव</string>
     <string name="blocked_road">अवरुद्ध सड़क</string>
-    <string name="request_help">मदद मांगें</string>
+    <string name="request_help_btn">मदद मांगें</string>
     <string name="other">अन्य</string>
     <string name="location">स्थान</string>
     <string name="edit_location">स्थान संपादित करें</string>
@@ -79,8 +88,12 @@
     <string name="optional_contact">वैकल्पिक संपर्क</string>
     <string name="contact_hint">आपका फोन या ईमेल (वैकल्पिक)</string>
     <string name="submit_report">रिपोर्ट सबमिट करें</string>
-    <string name="save_draft">ड्राफ्ट सहेजें</string>
-    <string name="report_success">रिपोर्ट प्राप्त हुई — सत्यापन लंबित है</string>
+    <string name="report_immediate_danger">तत्काल खतरे की रिपोर्ट करें</string>
+    <string name="auto_geolocation">ऑटो-जियोलोकेशन</string>
+    <string name="upload_photo">फोटो अपलोड करें</string>
+    <string name="short_notes">संक्षिप्त नोट्स</string>
+    <string name="report_received_title">रिपोर्ट प्राप्त हुई</string>
+    <string name="report_received_desc">आपकी रिपोर्ट सत्यापन के लिए कतार में है। यह जल्द ही मानचित्र पर दिखाई देगी।</string>
 
     <!-- Chat -->
     <string name="chat_title">RainGuardAI सहायक</string>
@@ -106,38 +119,41 @@
     <string name="call">कॉल करें</string>
 
     <!-- Authority Dashboard -->
-    <string name="dashboard_title">प्राधिकरण डैशबोर्ड</string>
-    <string name="incoming_reports">आने वाली रिपोर्ट</string>
-    <string name="suggested_actions">सुझाए गए कार्य</string>
+    <string name="command_center">कमांड सेंटर</string>
+    <string name="overview">अवलोकन</string>
+    <string name="incidents">घटनाएं</string>
+    <string name="shelters">आश्रय</string>
+    <string name="reports">रिपोर्ट</string>
+    <string name="active_reports">सक्रिय रिपोर्ट</string>
+    <string name="risk_level">जोखिम स्तर</string>
+    <string name="action_required">कार्रवाई आवश्यक</string>
+    <string name="regional_risk_index">क्षेत्रीय जोखिम सूचकांक</string>
+    <string name="system_status">सिस्टम स्थिति</string>
+    <string name="active_incidents">सक्रिय घटनाएं</string>
+    <string name="shelter_management">आश्रय प्रबंधन</string>
+    <string name="update_shelter">आश्रय अपडेट करें</string>
+    <string name="audit_log">ऑडिट लॉग और रिपोर्ट</string>
+    <string name="suggested_evac_route">सुझाया गया निकासी मार्ग</string>
+    <string name="daily">दैनिक</string>
+    <string name="weekly">साप्ताहिक</string>
+    <string name="monthly">मासिक</string>
     <string name="approve">अनुमोदित करें</string>
     <string name="reject">अस्वीकार करें</string>
-    <string name="filters">फ़िल्टर</string>
-    <string name="severity">तीव्रता</string>
-    <string name="time_range">समय सीमा</string>
-    <string name="unverified">असत्यापित</string>
-    <string name="export_csv">CSV निर्यात करें</string>
-    <string name="refresh">रिफ्रेश करें</string>
-    <string name="playback">प्लेबैक</string>
 
     <!-- Settings -->
     <string name="settings">सेटिंग्स</string>
-    <string name="profile">प्रोफ़ाइल</string>
-    <string name="app_mode">ऐप मोड</string>
-    <string name="localization">स्थानीयकरण</string>
-    <string name="text_size">टेक्स्ट का आकार</string>
-    <string name="small">छोटा</string>
-    <string name="default_size">डिफ़ॉल्ट</string>
-    <string name="large">बड़ा</string>
+    <string name="settings_contacts">सेटिंग्स और संपर्क</string>
+    <string name="saved_primary_shelter">सहेजा गया प्राथमिक आश्रय</string>
     <string name="emergency_contacts">आपातकालीन संपर्क</string>
     <string name="add_contact">संपर्क जोड़ें</string>
-    <string name="share_app">संपर्क के साथ ऐप साझा करें</string>
-    <string name="privacy_permissions">गोपनीयता और अनुमतियाँ</string>
-    <string name="open_app_settings">ऐप सेटिंग्स खोलें</string>
-    <string name="about">के बारे में</string>
-    <string name="version">वर्जन %s</string>
-    <string name="team">टीम</string>
-    <string name="github">GitHub</string>
-    <string name="privacy_blurb">आपका डेटा एन्क्रिप्टेड है और केवल आपातकालीन प्रतिक्रिया के लिए उपयोग किया जाता है</string>
+    <string name="trusted_contacts">विश्वसनीय संपर्क</string>
+    <string name="trusted_contacts_desc">निकासी के दौरान आपका स्थान इन संपर्कों के साथ ऑटो-शेयर किया जाएगा।</string>
+    <string name="add_trusted_contact">विश्वसनीय संपर्क जोड़ें</string>
+    <string name="clear_cache_desc">यह सभी सहेजे गए मार्गों और ऑफ़लाइन मानचित्र डेटा को हटा देगा। जारी रखें?</string>
+    <string name="switch_role">भूमिका बदलें</string>
+    <string name="toggle_switch_interface">इंटरफ़ेस स्विच करने के लिए टॉगल करें</string>
+    <string name="currently_citizen">वर्तमान: नागरिक</string>
+    <string name="currently_authority">वर्तमान: प्राधिकरण</string>
     <string name="danger_zone">खतरनाक क्षेत्र</string>
     <string name="clear_cache">कैश किया गया डेटा साफ़ करें</string>
     <string name="clear_cache_confirm">क्या आप सुनिश्चित हैं? यह सभी ऑफ़लाइन डेटा को हटा देगा।</string>
@@ -150,6 +166,4 @@
     <string name="retry">पुनः प्रयास करें</string>
     <string name="cancel">रद्द करें</string>
     <string name="ok">ठीक है</string>
-    <string name="network_error">नेटवर्क अनुपलब्ध — कैश किया गया डेटा दिखा रहा है</string>
-    <string name="report_queued">रिपोर्ट कतारबद्ध — ऑनलाइन होने पर अपलोड होगी</string>
 </resources>
