--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,12 +32,16 @@
     <string name="evacuate">Evacuate</string>
     <string name="report_incident">Report</string>
     <string name="current_risk">Current Risk</string>
-    <string name="risk_high">High</string>
-    <string name="risk_medium">Medium</string>
-    <string name="risk_low">Low</string>
+    <string name="risk_high">HIGH</string>
+    <string name="risk_medium">MEDIUM</string>
+    <string name="risk_low">LOW</string>
     <string name="nearest_shelter">Nearest Shelter</string>
     <string name="last_updated">Last updated: %s</string>
-    <string name="confidence">Confidence: %d%%</string>
+    <string name="confidence_label">Confidence: %d%%</string>
+    <string name="live_status">Live Status</string>
+    <string name="evacuate_nearest">Evacuate to Nearest Shelter</string>
+    <string name="report_flood_damage">Report Flood / Damage</string>
+    <string name="nearest_shelter_info">Nearest Shelter Info</string>
 
     <!-- Evacuation Route -->
     <string name="safe_route">Safe Route</string>
@@ -50,6 +54,9 @@
     <string name="send_to_contacts">Send to Contacts</string>
     <string name="low_confidence_warning">This route has low confidence. Please confirm before proceeding.</string>
     <string name="confirm_route">Confirm Route</string>
+    <string name="route_details">Route Details</string>
+    <string name="model_trace">Model Trace Data</string>
+    <string name="sources_used">Sources used for this computation:</string>
 
     <!-- Alerts -->
     <string name="alerts">Alerts</string>
@@ -61,6 +68,8 @@
     <string name="im_safe">I\'m Safe</string>
     <string name="no_alerts">No active alerts</string>
     <string name="no_alerts_desc">You\'re all caught up!</string>
+    <string name="notifications_alerts">Notifications &amp; Alerts</string>
+    <string name="request_help_area">Request help for this area</string>
 
     <!-- Report -->
     <string name="create_report">Create Report</string>
@@ -68,7 +77,7 @@
     <string name="flood">Flood</string>
     <string name="erosion">Erosion</string>
     <string name="blocked_road">Blocked Road</string>
-    <string name="request_help">Request Help</string>
+    <string name="request_help_btn">Request Help</string>
     <string name="other">Other</string>
     <string name="location">Location</string>
     <string name="edit_location">Edit Location</string>
@@ -79,8 +88,12 @@
     <string name="optional_contact">Optional Contact</string>
     <string name="contact_hint">Your phone or email (optional)</string>
     <string name="submit_report">Submit Report</string>
-    <string name="save_draft">Save Draft</string>
-    <string name="report_success">Report received — verification pending</string>
+    <string name="report_immediate_danger">REPORT IMMEDIATE DANGER</string>
+    <string name="auto_geolocation">Auto-Geolocation</string>
+    <string name="upload_photo">Upload Photo</string>
+    <string name="short_notes">Short Notes</string>
+    <string name="report_received_title">Report Received</string>
+    <string name="report_received_desc">Your report has been queued for verification. It will appear on the map shortly.</string>
 
     <!-- Chat -->
     <string name="chat_title">RainGuardAI Assistant</string>
@@ -106,38 +119,42 @@
     <string name="call">Call</string>
 
     <!-- Authority Dashboard -->
-    <string name="dashboard_title">Authority Dashboard</string>
-    <string name="incoming_reports">Incoming Reports</string>
-    <string name="suggested_actions">Suggested Actions</string>
+    <string name="command_center">Command Center</string>
+    <string name="overview">Overview</string>
+    <string name="incidents">Incidents</string>
+    <string name="shelters">Shelters</string>
+    <string name="reports">Reports</string>
+    <string name="active_reports">Active Reports</string>
+    <string name="risk_level">Risk Level</string>
+    <string name="action_required">Action Required</string>
+    <string name="regional_risk_index">Regional Risk Index</string>
+    <string name="system_status">System Status</string>
+    <string name="active_incidents">Active Incidents</string>
+    <string name="shelter_management">Shelter Management</string>
+    <string name="update_shelter">Update Shelter</string>
+    <string name="audit_log">Audit Log &amp; Reports</string>
+    <string name="suggested_evac_route">Suggested Evacuation Route</string>
+    <string name="daily">Daily</string>
+    <string name="weekly">Weekly</string>
+    <string name="monthly">Monthly</string>
     <string name="approve">Approve</string>
     <string name="reject">Reject</string>
-    <string name="filters">Filters</string>
-    <string name="severity">Severity</string>
-    <string name="time_range">Time Range</string>
-    <string name="unverified">Unverified</string>
-    <string name="export_csv">Export CSV</string>
-    <string name="refresh">Refresh</string>
-    <string name="playback">Playback</string>
+    <string name="verified_by_system">Verified by system at %s</string>
 
     <!-- Settings -->
     <string name="settings">Settings</string>
-    <string name="profile">Profile</string>
-    <string name="app_mode">App Mode</string>
-    <string name="localization">Localization</string>
-    <string name="text_size">Text Size</string>
-    <string name="small">Small</string>
-    <string name="default_size">Default</string>
-    <string name="large">Large</string>
+    <string name="settings_contacts">Settings &amp; Contacts</string>
+    <string name="saved_primary_shelter">Saved Primary Shelter</string>
     <string name="emergency_contacts">Emergency Contacts</string>
     <string name="add_contact">Add Contact</string>
-    <string name="share_app">Share App with Contact</string>
-    <string name="privacy_permissions">Privacy &amp; Permissions</string>
-    <string name="open_app_settings">Open App Settings</string>
-    <string name="about">About</string>
-    <string name="version">Version %s</string>
-    <string name="team">Team</string>
-    <string name="github">GitHub</string>
-    <string name="privacy_blurb">Your data is encrypted and used only for emergency response</string>
+    <string name="trusted_contacts">Trusted Contacts</string>
+    <string name="trusted_contacts_desc">Your location will be auto-shared with these contacts during evacuation.</string>
+    <string name="add_trusted_contact">Add Trusted Contact</string>
+    <string name="clear_cache_desc">This will delete all saved routes and offline map data. Continue?</string>
+    <string name="switch_role">Switch Role</string>
+    <string name="toggle_switch_interface">Toggle to switch interface</string>
+    <string name="currently_citizen">Currently: Citizen</string>
+    <string name="currently_authority">Currently: Authority</string>
     <string name="danger_zone">Danger Zone</string>
     <string name="clear_cache">Clear Cached Data</string>
     <string name="clear_cache_confirm">Are you sure? This will remove all offline data.</string>
@@ -150,6 +167,4 @@
     <string name="retry">Retry</string>
     <string name="cancel">Cancel</string>
     <string name="ok">OK</string>
-    <string name="network_error">Network unavailable — showing cached data</string>
-    <string name="report_queued">Report queued — will upload when online</string>
 </resources>
